--- a/task06/assets/stylesheets/mian.css
+++ b/task06/assets/stylesheets/mian.css
@@ -80,10 +80,13 @@ the actual width will remain 400 pixels (margin will be added to calculate the f
     padding-right: 44px;
     width: 980px;
     margin: 0 auto;
+    background-color: #fff;
 }
 
 body {
     font-family: '黑体';
+    background-color: rgba(88, 161, 177, 0.13);
+    height: 1386px;
 }
 
 /*
@@ -182,36 +185,177 @@ content
 }
 
 .about-technologe-text{
-    font-size: 12px;
+    font: oblique 12px '楷体';
     color: #676767;
-    font-family: '楷体';
     line-height: 10px;
-    font-style: oblique;
 }
 .seven-hundred{
     font-size: 116px;
     color: #75b86b;
     font-style: oblique;
+    margin-top: 38px;
 }
 .three-two{
-    float: left;
+
     font-size: 55px;
     color: #cc8091;
 
 }
+
 .css-css{
 
-    float: left;
+
     font-size: 21px;
     color: #cc8091;
     position: absolute;
-    top: 230px;
+    top: 270px;
     left: 78px;
 }
 .csssssss{
     font-size: 12px;
     color: #676767;
     position: absolute;
-    top: 250px;
+    top: 289px;
     left: 78px;
+}
+
+.content-part-one{
+    padding-top: 50px;
+}
+
+.content-part-two{
+    padding-top: 30px;
+}
+
+.part-two-div-one{
+    display: inline-block;
+    width: 225px;
+}
+.part-two-div-one h3,
+.part-two-div-two h3,
+.part-two-div-three h3{
+    font: bold 16px '微软雅黑';
+    text-decoration: underline;
+}
+
+.part-two-div-one h3{
+    color: #418c59;
+}
+.part-two-div-two h3{
+    color: #d2994f;
+}
+.part-two-div-three h3{
+    color: #cc7680;
+}
+
+.part-two-div-one p{
+    font: 12px '宋体';
+    color: #767777;
+    line-height: 16px;
+    margin-top: 10px;
+    text-align: justify;
+}
+
+.part-two-div-two{
+    display: inline-block;
+    width: 200px;
+    margin-left: 30px;
+}
+
+.part-two-div-two p{
+    font:12px/16px '微软雅黑';
+    color: rgba(35,24,21,0.7);
+    margin-top: 10px;
+    text-align: justify;
+}
+
+.part-two-div-three{
+    display: inline-block;
+    width: 130px;
+    margin-left: 30px;
+}
+
+.part-two-div-three p{
+    font:12px/16px '微软雅黑';
+    color: rgba(35,24,21,0.7);
+    margin-top: 10px;
+    text-align: justify;
+}
+.part-two-div-three p span{
+    color: rgba(205,74,72,0.7);
+    font-style: oblique;
+}
+.div-three-p-one{
+    margin-bottom: 44px;
+}
+.content-part-three{
+    padding-top: 50px;
+}
+
+.left-title{
+    font:oblique bold 72px '黑体';
+    color: #f5e327;
+
+}
+
+.left-second-title{
+    font:bold 42px/46px '黑体';
+    color: #11456b;
+}
+
+.part-three-left h2{
+    width: 415px;
+    font:bold 33px '黑体';
+    color: #11456b;
+    border-bottom: 2px solid #11456b;
+    padding-bottom: 15px;
+}
+
+.text-one{
+    padding-top: 30px;
+    padding-right: 7px;
+    font:12px/16px '宋体';
+    color: #767777;
+
+    text-align: justify;
+}
+
+.text-one:first-letter{
+    font:70px/70px '微软雅黑';
+    color: #f5e327;
+    float: left;
+}
+
+.part-three-left{
+    width: 420px;
+    display: inline-block;
+}
+.part-three-left img{
+    float: right;
+    margin: 0 0 1em 1em;
+}
+
+.text-two,
+.text-three{
+    color: #767777;
+    font:12px/16px '宋体';
+    text-indent:24px;
+    text-align: justify;
+}
+
+.part-three-right{
+    display: inline-block;
+}
+
+.part-three-right img{
+    width: 458px;
+    height: 275px;
+    display: block;
+}
+
+.right-content{
+    width: 459px;
+    height: 318px;
+    background-color: #eeeed6;
+    margin-top: 30px;
 }
