--- a/task06/assets/stylesheets/mian.css
+++ b/task06/assets/stylesheets/mian.css
@@ -344,18 +344,45 @@ content
 }
 
 .part-three-right{
+    position: relative;
+    width: 460px;
     display: inline-block;
 }
 
 .part-three-right img{
     width: 458px;
     height: 275px;
-    display: block;
 }
 
 .right-content{
+
     width: 459px;
     height: 318px;
     background-color: #eeeed6;
     margin-top: 30px;
+}
+
+.right-title-one{
+    position: absolute;
+    top: 20px;
+    width: 458px;
+    height: 61px;
+    font: 26px '微软雅黑';
+    color: #000;
+}
+ul{
+    background-color: #eeeed6;
+    font: 16px/20px '宋体';
+}
+ul li{
+    background:url("/task06/assets/images/triangle.png") 0 50% no-repeat;
+    list-style-type: none;
+    padding-left: 12px;
+    color: #5a5b5b;
+    text-align: left;
+    margin-top: 20px;
+}
+
+.o-text{
+    
 }
