--- a/task06/assets/stylesheets/mian.css
+++ b/task06/assets/stylesheets/mian.css
@@ -385,6 +385,7 @@ content
 }
 ul{
     font: 16px/20px '宋体';
+    padding: 10px;
 }
 ul li{
     background:url("/task06/assets/images/triangle.png") 0 50% no-repeat;
@@ -400,7 +401,7 @@ ul li{
     height: 318px;
     background-color: #eeeed6;
     position: relative;
-    
+
 }
 
 .o-text{
@@ -417,10 +418,9 @@ ul li{
     height: 160px;
     width: 260px;
     background-color: #d45d5c;
-    display: inline-block;
     position: relative;
     color: #fff;
-    margin-top: 57px;
+    margin-top: 18px;
 }
 .number-box p{
     display: inline-block;
