--- a/task07/assets/stylesheets/main.css
+++ b/task07/assets/stylesheets/main.css
@@ -49,8 +49,24 @@ common
 ===================
 */
 
+
+*,
+*:before,
+*:after{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.container{
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+
 .container{
     width: 1280px;
+    margin: 0 auto;
 }
 
 
@@ -67,6 +83,7 @@ header{
 
 header h1{
     float: left;
+    font-size: 22px;
 }
 
 header li{
