--- a/task07/assets/stylesheets/main.css
+++ b/task07/assets/stylesheets/main.css
@@ -65,7 +65,7 @@ common
 
 
 .container{
-    width: 1280px;
+    width: 1340px;
     margin: 0 auto;
 }
 
@@ -88,4 +88,9 @@ header h1{
 
 header li{
     display: inline-block;
+}
+
+.p-one img{
+    width: 1280px;
+    height: 690px;
 }
