--- a/task07/assets/stylesheets/main.css
+++ b/task07/assets/stylesheets/main.css
@@ -240,28 +240,26 @@ font-weight: 300;
     width: 1280px;
     top: 170px;
 }
-
-.dropdown,
-.area-button{
-    position: relative;
-    display: inline-block;
-    width: 25%;
+.select-area button,
+select{
+    width: 18%;
+    height: 36px;
+    margin: 0 12px;
 }
-
-.dropdown-content{
-    display: none;
-    position: absolute;
-    z-index: 1;
-}
-.dropdown:hover .dropdown-content{
-    display: block;
-}
-
-.select-area-child img{
+.select-area button{
     background-color: #E65153;
-    background-size: 35px;
+    font-size: 16px;
+    border:none;
+    color: #fff;
 }
-.select-area-child input{
-    height: 35px;
-    width: 236px;
+select{
+    -webkit-appearance: none;
+    background: url("../imgs/red-arrow.png") 200px no-repeat #fff;
+    padding: 0 5px;
+    border-radius: 0;
+}
+
+select::-ms-expand{
+    display: none;
+
 }
