--- a/task07/assets/stylesheets/main.css
+++ b/task07/assets/stylesheets/main.css
@@ -55,6 +55,7 @@ table {
 }
 body{
     font:300 16px/22px "Lato","Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    background: #F7F7F7;
 }
 .container{
     padding-left: 30px;
@@ -262,4 +263,19 @@ select{
 select::-ms-expand{
     display: none;
 
+}
+
+.three-two-text span{
+    padding-bottom: 10px;
+    border-bottom: 2px solid #fff;
+}
+/*========================part four========================*/
+.p-four div{
+    display: inline-block;
+    padding: 100px 15px;
+}
+
+.p-four img{
+    padding: 12px 8px;
+    border: 1px solid rgba(68, 68, 68, 0.22);
 }
