--- a/task07/assets/stylesheets/main.css
+++ b/task07/assets/stylesheets/main.css
@@ -270,6 +270,10 @@ select::-ms-expand{
     border-bottom: 2px solid #fff;
 }
 /*========================part four========================*/
+
+.p-four{
+    clear: both;
+}
 .p-four div{
     display: inline-block;
     padding: 100px 15px;
